--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
 <body bgcolor="#64ffda">
     <div class="container center-align">
+      <h2>Electives Selection App</h2>
         <div class="row">
             <div class="col s12">
                 <div class="card white">
